--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dpatron",
-  "version": "0.0.0",
+  "name": "poc-next13",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev:turbo": "next dev --turbo",
@@ -46,7 +46,6 @@
     "@radix-ui/react-toast": "^1.1.1",
     "@radix-ui/react-toolbar": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.2",
-    "@scaffold-eth/common": "0.0.0",
     "@tanstack/react-query": "^4.13.0",
     "@trpc/client": "next",
     "@trpc/next": "next",
@@ -102,5 +101,6 @@
     "tailwindcss": "^3.2.1",
     "tailwindcss-elevation": "^1.0.1",
     "typescript": "4.8.4"
-  }
+  },
+  "packageManager": "yarn@3.2.4"
 }
